<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pet-Safe</string>
    <string name="str_animal">Nome do animal</string>
    <string name="str_especie">Espécie</string>
    <string name="str_nascimento">Data de nascimento</string>
    <string name="str_descricao">Descrição</string>
    <string name="str_vacina">Vacina</string>
    <string name="str_remedio">Remédio</string>
    <string name="str_aplicada">Aplicada</string>
    <string name="str_revacinar">Revacinar</string>
    <string name="str_data_aplicar">Data da aplicação</string>
    <string name="str_data_revacinar">Data da revacinação</string>
    <string name="str_empty">Preencha o(s) campo(s):\n</string>
    <string name="str_err_sql_open">Erro abrindo banco de dados</string>
    <string name="str_read">para leitura!</string>
    <string name="str_write">para escrita!</string>
    <string name="str_fail">Operação falhou!</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancela</string>
    <string name="str_yes">Sim</string>
    <string name="str_no">Não</string>
    <string name="str_msg_plus">\tconforme a mensagem abaixo:\n</string>
    <string name="str_lab_ini">Início em:</string>
    <string name="str_ini">Início</string>
    <string name="str_success">Operação efetuada com êxito!</string>
    <string name="str_animais">Animais</string>
    <string name="str_vacinas">Vacinas</string>
    <string name="str_remedios">Remédios</string>
    <string name="str_tipos">Tipos</string>
    <string name="str_tipo">Tipo</string>
    <string name="str_tipos_vacina">Tipos de vacina</string>
    <string name="str_tipos_remedio">Tipos de remédio</string>
    <string name="str_err_insert">Erro inserindo</string>
    <string name="str_err_update">Erro alterando</string>
    <string name="str_err_delete">Erro excluindo</string>
    <string name="str_err_find">Erro buscando</string>
    <string name="str_confirm_delete">Deseja realmente remover</string>
    <string name="str_remove">Remover</string>
    <string name="str_update_none">Nenhuma alteração foi feita!</string>
    <string name="str_name_found">Já existe um animal com esse nome!</string>
    <string name="str_vacina_tipo_found">Já existe um tipo de vacina com essa descrição!</string>
    <string name="str_remedio_tipo_found">Já existe um tipo de remédio com essa descrição!</string>
    <string name="str_vacina_found">Já existe uma vacina com essa descrição!</string>
    <string name="str_remedio_found">Já existe um remédio com essa descrição!</string>
    <string name="str_vacina_relation_found">Animal já tomou essa vacina nesta data!</string>
    <string name="str_remedio_relation_found">Animal já tomou essa dose do remédio!</string>
    <string name="str_fail_find_name">Consulta SQL falhou buscando nome!</string>
    <string name="str_fail_find_desc">Consulta SQL falhou buscando descrição!</string>
    <string name="str_fail_find_vacina">Consulta SQL falhou buscando vacina!</string>
    <string name="str_fail_find_remedio">Consulta SQL falhou buscando remédio!</string>
    <string name="str_vacina_date_error">Data de revacinação anterior a aplicação!</string>
    <string name="str_vacina_key_found">A vacina com esse nome e essa data de aplicação já existe para o animal!</string>
    <string name="str_vacina_not_yet">Não chegou a época de aplicar essa vacina no animal!</string>
    <string name="str_dates_equal">As datas de aplicar e revacinar são idênticas!"</string>
    <string name="str_animal_x_vacina">Relação animais e vacinas</string>
    <string name="str_animal_x_remedio">Relação animais e remédios</string>
    <string name="str_update_disabled">O registro que você está tentando alterar não existe mais.</string>
    <string name="str_delete_disabled">O registro que você está tentando excluir não existe mais.</string>
    <string name="str_none">Nada!</string>
    <string name="str_delete_all">Deseja realmente remover todos os registros selecionados?</string>
    <string name="str_invalid_order">Ordenação inválida!</string>
    <string name="str_data_inicial">Data inicial</string>
    <string name="str_frequencia">Frequência</string>
    <string name="str_intervalo">Intervalo</string>
    <string name="str_dosagem">Dosagem</string>
    <string name="str_dose">Dose</string>
    <string name="str_invalid_remedio">A frequência é maior ou igual ao intervalo!</string>
    <string name="str_not_selection">Nenhum registro selecionado!</string>
    <string name="str_select_one">Selecione ao menos um campo!</string>
    <string name="str_massive">Muito massivo para notificar!</string>
    <string name="str_notif_vac">Dados para notificações de vacinas</string>
    <string name="str_notif_rem">Dados para notificações de remédios</string>
    <string name="str_all_rest_changed">Deseja aplicar as atualizações a todas as outras doses do remédio?</string>
    <string name="str_extended">Estender atualizações</string>
    <string name="str_notify_ini_vac">Notificando vacinas...</string>
    <string name="str_notify_ini_rem">Notificando remédios...</string>
    <string name="str_prev">Alarme programado:</string>
</resources>
