<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.alexandrebarboza.vacinas.AnimalEditActivity"
    android:id="@+id/activity_animal_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_gray"
    android:weightSum="4"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_nome_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2.5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/str_animal"
            android:textColor="@color/black"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/edit_nome_animal"
            android:maxLength="25"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="2.5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="2.5dp"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_gravity="center_horizontal"
            android:windowSoftInputMode="stateVisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_especie_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2.5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/str_especie"
            android:textColor="@color/black"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:layout_gravity="center_horizontal" />

        <Spinner
            android:id="@+id/spinner_especie_animal"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_nascimento_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/str_nascimento"
            android:textColor="@color/black"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:ems="10"
            android:id="@+id/text_nascimento_animal"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:text="Vacinar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:id="@+id/button_vacinar"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@drawable/bt_default_green"
            android:layout_weight="1" />

        <Button
            android:text="Medicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:id="@+id/button_medicar"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@drawable/bt_default_green"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>