<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_history_vacinas_filtro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.alexandrebarboza.vacinas.VacinaHistoryFiltroActivity"
    android:weightSum="5"
    android:background="@color/light_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:text="Vacinas - Filtragem:"
            android:textColor="@color/dark_blue"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/str_tipo"
            android:textColor="@color/black"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spinner_tipo_vacina"
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/str_descricao"
            android:textColor="@color/black"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spinner_descricao_vacina"
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_aplicada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/str_aplicada"
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/check_aplicada"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="De: "
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/text_aplicada_vacina_inicio"
                android:layout_width="65dp"
                android:layout_height="20dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edit_default_white"
                android:textColor="@color/black"
                android:elevation="6dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="Até: "
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_aplicada_vacina_fim"
                android:layout_width="65dp"
                android:layout_height="20dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edit_default_white"
                android:textColor="@color/black"
                android:elevation="6dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_revacinar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/str_revacinar"
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/check_revacinar"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="De: "
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_revacinar_vacina_inicio"
                android:layout_width="65dp"
                android:layout_height="20dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edit_default_white"
                android:textColor="@color/black"
                android:elevation="6dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="Até: "
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_revacinar_vacina_fim"
                android:layout_width="65dp"
                android:layout_height="20dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edit_default_white"
                android:textColor="@color/black"
                android:elevation="6dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>